refactored to java 1.8